--- a/index.html
+++ b/index.html
@@ -40,18 +40,52 @@
                     Déjame ayudarte a mejorar tu negocio
                 </h1>
 
-                <div class="text-lg md:text-xl text-gray-300 leading-relaxed max-w-3xl mx-auto fade-in">
-                    <p class="mb-6">
-                        En un mundo donde cada minuto cuenta, integrar inteligencia artificial en tu negocio ya no es una opción, es una necesidad. La IA no solo automatiza tareas repetitivas, sino que optimiza procesos, reduce errores y libera a tu equipo para centrarse en lo que realmente importa: hacer crecer tu empresa.
-                    </p>
-                    <p class="mb-6">
-                        Desde responder consultas de clientes en segundos hasta analizar grandes volúmenes de datos para tomar decisiones más inteligentes, la IA te permite ahorrar tiempo y dinero mientras aumentas la eficiencia y competitividad.
-                    </p>
-                    <p>
-                        No se trata solo de tecnología, sino de transformar la manera en que trabajas y obtener resultados tangibles desde el primer día.
-                    </p>
-                </div>
-            </div>
+                <!-- Hero Section actualizado: Flujo tipo n8n -->
+<section class="py-20 flex flex-col items-center justify-center px-4 relative">
+    <div class="max-w-4xl mx-auto space-y-10">
+        <!-- Bloque 1 -->
+        <div class="bg-gradient-to-r from-blue-900 to-blue-700 text-white p-6 rounded-xl shadow-lg fade-in"
+             style="border-left: 5px solid #0ee6b7;">
+            En un mundo donde cada minuto cuenta, integrar inteligencia artificial en tu negocio ya no es una opción, es una necesidad.
+        </div>
+        <!-- Bloque 2 -->
+        <div class="bg-gradient-to-r from-purple-700 to-purple-500 text-white p-6 rounded-xl shadow-lg fade-in"
+             style="border-left: 5px solid #facc15;">
+            La IA no solo automatiza tareas repetitivas, sino que optimiza procesos, reduce errores y libera a tu equipo para centrarse en lo que realmente importa: hacer crecer tu empresa.
+        </div>
+        <!-- Bloque 3 -->
+        <div class="bg-gradient-to-r from-emerald-600 to-emerald-400 text-white p-6 rounded-xl shadow-lg fade-in"
+             style="border-left: 5px solid #3b82f6;">
+            Desde responder consultas de clientes en segundos hasta analizar grandes volúmenes de datos para tomar decisiones más inteligentes.
+        </div>
+        <!-- Bloque 4 -->
+        <div class="bg-gradient-to-r from-orange-500 to-orange-300 text-white p-6 rounded-xl shadow-lg fade-in"
+             style="border-left: 5px solid #a78bfa;">
+            La IA te permite ahorrar tiempo y dinero mientras aumentas la eficiencia y competitividad.
+        </div>
+        <!-- Bloque 5 -->
+        <div class="bg-gradient-to-r from-pink-500 to-pink-300 text-white p-6 rounded-xl shadow-lg fade-in"
+             style="border-left: 5px solid #22d3ee;">
+            No se trata solo de tecnología, sino de transformar la manera en que trabajas y obtener resultados tangibles desde el primer día.
+        </div>
+        <!-- Bloque 6 -->
+        <div class="bg-gradient-to-r from-indigo-700 to-indigo-500 text-white p-6 rounded-xl shadow-lg fade-in"
+             style="border-left: 5px solid #f472b6;">
+            Optimiza cada proceso de tu negocio y libera a tu equipo para tareas estratégicas.
+        </div>
+        <!-- Bloque 7 -->
+        <div class="bg-gradient-to-r from-rose-600 to-rose-400 text-white p-6 rounded-xl shadow-lg fade-in"
+             style="border-left: 5px solid #22c55e;">
+            Responde más rápido, toma decisiones basadas en datos y mejora la experiencia de tus clientes.
+        </div>
+        <!-- Bloque 8 -->
+        <div class="bg-gradient-to-r from-yellow-500 to-yellow-300 text-white p-6 rounded-xl shadow-lg fade-in"
+             style="border-left: 5px solid #6366f1;">
+            Integra IA hoy y comienza a ver resultados desde el primer día.
+        </div>
+    </div>
+</section>
+
         </section>
 
         <!-- Automatizaciones Section -->
