--- a/index.html
+++ b/index.html
@@ -40,47 +40,61 @@
                     Déjame ayudarte a mejorar tu negocio
                 </h1>
 
-                <!-- Hero Section actualizado: Flujo tipo n8n -->
+              <!-- Hero Section tipo flujo n8n compacto -->
 <section class="py-20 flex flex-col items-center justify-center px-4 relative">
-    <div class="max-w-4xl mx-auto space-y-10">
+    <div class="max-w-4xl mx-auto flex flex-col items-center space-y-8">
         <!-- Bloque 1 -->
-        <div class="bg-gradient-to-r from-blue-900 to-blue-700 text-white p-6 rounded-xl shadow-lg fade-in"
-             style="border-left: 5px solid #0ee6b7;">
+        <div class="bg-gradient-to-r from-blue-900 to-blue-700 text-white p-4 rounded-xl shadow-md fade-in"
+             style="border-left: 4px solid #0ee6b7; width: 100%; max-width: 600px;">
             En un mundo donde cada minuto cuenta, integrar inteligencia artificial en tu negocio ya no es una opción, es una necesidad.
         </div>
+        <div class="w-1 h-8 bg-gray-400"></div> <!-- línea de conexión -->
+
         <!-- Bloque 2 -->
-        <div class="bg-gradient-to-r from-purple-700 to-purple-500 text-white p-6 rounded-xl shadow-lg fade-in"
-             style="border-left: 5px solid #facc15;">
+        <div class="bg-gradient-to-r from-purple-700 to-purple-500 text-white p-4 rounded-xl shadow-md fade-in"
+             style="border-left: 4px solid #facc15; width: 100%; max-width: 600px;">
             La IA no solo automatiza tareas repetitivas, sino que optimiza procesos, reduce errores y libera a tu equipo para centrarse en lo que realmente importa: hacer crecer tu empresa.
         </div>
+        <div class="w-1 h-8 bg-gray-400"></div>
+
         <!-- Bloque 3 -->
-        <div class="bg-gradient-to-r from-emerald-600 to-emerald-400 text-white p-6 rounded-xl shadow-lg fade-in"
-             style="border-left: 5px solid #3b82f6;">
+        <div class="bg-gradient-to-r from-emerald-600 to-emerald-400 text-white p-4 rounded-xl shadow-md fade-in"
+             style="border-left: 4px solid #3b82f6; width: 100%; max-width: 600px;">
             Desde responder consultas de clientes en segundos hasta analizar grandes volúmenes de datos para tomar decisiones más inteligentes.
         </div>
+        <div class="w-1 h-8 bg-gray-400"></div>
+
         <!-- Bloque 4 -->
-        <div class="bg-gradient-to-r from-orange-500 to-orange-300 text-white p-6 rounded-xl shadow-lg fade-in"
-             style="border-left: 5px solid #a78bfa;">
+        <div class="bg-gradient-to-r from-orange-500 to-orange-300 text-white p-4 rounded-xl shadow-md fade-in"
+             style="border-left: 4px solid #a78bfa; width: 100%; max-width: 600px;">
             La IA te permite ahorrar tiempo y dinero mientras aumentas la eficiencia y competitividad.
         </div>
+        <div class="w-1 h-8 bg-gray-400"></div>
+
         <!-- Bloque 5 -->
-        <div class="bg-gradient-to-r from-pink-500 to-pink-300 text-white p-6 rounded-xl shadow-lg fade-in"
-             style="border-left: 5px solid #22d3ee;">
+        <div class="bg-gradient-to-r from-pink-500 to-pink-300 text-white p-4 rounded-xl shadow-md fade-in"
+             style="border-left: 4px solid #22d3ee; width: 100%; max-width: 600px;">
             No se trata solo de tecnología, sino de transformar la manera en que trabajas y obtener resultados tangibles desde el primer día.
         </div>
+        <div class="w-1 h-8 bg-gray-400"></div>
+
         <!-- Bloque 6 -->
-        <div class="bg-gradient-to-r from-indigo-700 to-indigo-500 text-white p-6 rounded-xl shadow-lg fade-in"
-             style="border-left: 5px solid #f472b6;">
+        <div class="bg-gradient-to-r from-indigo-700 to-indigo-500 text-white p-4 rounded-xl shadow-md fade-in"
+             style="border-left: 4px solid #f472b6; width: 100%; max-width: 600px;">
             Optimiza cada proceso de tu negocio y libera a tu equipo para tareas estratégicas.
         </div>
+        <div class="w-1 h-8 bg-gray-400"></div>
+
         <!-- Bloque 7 -->
-        <div class="bg-gradient-to-r from-rose-600 to-rose-400 text-white p-6 rounded-xl shadow-lg fade-in"
-             style="border-left: 5px solid #22c55e;">
+        <div class="bg-gradient-to-r from-rose-600 to-rose-400 text-white p-4 rounded-xl shadow-md fade-in"
+             style="border-left: 4px solid #22c55e; width: 100%; max-width: 600px;">
             Responde más rápido, toma decisiones basadas en datos y mejora la experiencia de tus clientes.
         </div>
+        <div class="w-1 h-8 bg-gray-400"></div>
+
         <!-- Bloque 8 -->
-        <div class="bg-gradient-to-r from-yellow-500 to-yellow-300 text-white p-6 rounded-xl shadow-lg fade-in"
-             style="border-left: 5px solid #6366f1;">
+        <div class="bg-gradient-to-r from-yellow-500 to-yellow-300 text-white p-4 rounded-xl shadow-md fade-in"
+             style="border-left: 4px solid #6366f1; width: 100%; max-width: 600px;">
             Integra IA hoy y comienza a ver resultados desde el primer día.
         </div>
     </div>
