--- a/index.html
+++ b/index.html
@@ -40,92 +40,104 @@
                     Déjame ayudarte a mejorar tu negocio
                 </h1>
 
-            <!-- Hero Section: Flujo n8n visual -->
-<section class="py-20 flex flex-col items-center justify-center px-4 relative">
-    <div class="max-w-4xl mx-auto flex flex-col items-center space-y-8 relative">
-        <!-- Bloque 1 -->
-        <div class="bg-gradient-to-r from-blue-900 to-blue-700 text-white p-4 rounded-xl shadow-md fade-in"
-             style="border-left: 4px solid #0ee6b7; width: 100%; max-width: 600px;">
-            En un mundo donde cada minuto cuenta, integrar inteligencia artificial en tu negocio ya no es una opción, es una necesidad.
+    <!-- Hero Section Profesional: Flujo tipo n8n con rastro de luz -->
+<section class="py-20 relative min-h-screen flex justify-center items-start px-4 overflow-hidden bg-gray-900">
+    <div class="relative w-full max-w-6xl h-full">
+
+        <!-- Bloques compactos negros con palabras resaltadas -->
+        <div class="block absolute top-0 left-1/2 transform -translate-x-1/2 bg-black text-white p-2 rounded-md shadow-lg fade-in"
+             style="width: 180px;" data-delay="0">
+            En un <span class="text-emerald-400 font-bold">mundo</span> donde cada minuto cuenta, <span class="text-blue-400 font-bold">integrar IA</span> ya no es opcional.
         </div>
 
-        <!-- Línea de conexión diagonal -->
-        <div class="relative w-full flex justify-center">
-            <div class="absolute w-1 h-16 bg-gray-400 rotate-12 origin-top-left"></div>
+        <div class="block absolute top-40 right-0 bg-black text-white p-2 rounded-md shadow-lg fade-in"
+             style="width: 180px;" data-delay="0.2">
+            La <span class="text-pink-400 font-bold">IA</span> optimiza <span class="text-yellow-400 font-bold">procesos</span>, reduce errores y libera a tu <span class="text-blue-400 font-bold">equipo</span>.
         </div>
 
-        <!-- Bloque 2 -->
-        <div class="bg-gradient-to-r from-purple-700 to-purple-500 text-white p-4 rounded-xl shadow-md fade-in"
-             style="border-left: 4px solid #facc15; width: 100%; max-width: 600px;">
-            La IA no solo automatiza tareas repetitivas, sino que optimiza procesos, reduce errores y libera a tu equipo para centrarse en lo que realmente importa: hacer crecer tu empresa.
+        <div class="block absolute top-72 left-0 bg-black text-white p-2 rounded-md shadow-lg fade-in"
+             style="width: 180px;" data-delay="0.4">
+            Desde <span class="text-emerald-400 font-bold">responder consultas</span> hasta analizar <span class="text-yellow-400 font-bold">datos masivos</span> para decisiones inteligentes.
         </div>
 
-        <!-- Línea de conexión diagonal -->
-        <div class="relative w-full flex justify-center">
-            <div class="absolute w-1 h-16 bg-gray-400 -rotate-12 origin-top-left"></div>
+        <div class="block absolute top-[22rem] right-0 bg-black text-white p-2 rounded-md shadow-lg fade-in"
+             style="width: 180px;" data-delay="0.6">
+            La <span class="text-pink-400 font-bold">IA</span> te permite ahorrar <span class="text-emerald-400 font-bold">tiempo</span> y dinero mientras aumentas la <span class="text-blue-400 font-bold">eficiencia</span>.
         </div>
 
-        <!-- Bloque 3 -->
-        <div class="bg-gradient-to-r from-emerald-600 to-emerald-400 text-white p-4 rounded-xl shadow-md fade-in"
-             style="border-left: 4px solid #3b82f6; width: 100%; max-width: 600px;">
-            Desde responder consultas de clientes en segundos hasta analizar grandes volúmenes de datos para tomar decisiones más inteligentes.
+        <div class="block absolute top-[26rem] left-1/4 bg-black text-white p-2 rounded-md shadow-lg fade-in"
+             style="width: 180px;" data-delay="0.8">
+            No se trata solo de <span class="text-pink-400 font-bold">tecnología</span>, sino de transformar cómo trabajas y obtener <span class="text-emerald-400 font-bold">resultados</span> desde el primer día.
         </div>
 
-        <!-- Línea de conexión diagonal -->
-        <div class="relative w-full flex justify-center">
-            <div class="absolute w-1 h-16 bg-gray-400 rotate-12 origin-top-left"></div>
+        <div class="block absolute top-[30rem] right-1/6 bg-black text-white p-2 rounded-md shadow-lg fade-in"
+             style="width: 180px;" data-delay="1">
+            Optimiza cada <span class="text-blue-400 font-bold">proceso</span> de tu negocio y libera a tu equipo para tareas <span class="text-yellow-400 font-bold">estratégicas</span>.
         </div>
 
-        <!-- Bloque 4 -->
-        <div class="bg-gradient-to-r from-orange-500 to-orange-300 text-white p-4 rounded-xl shadow-md fade-in"
-             style="border-left: 4px solid #a78bfa; width: 100%; max-width: 600px;">
-            La IA te permite ahorrar tiempo y dinero mientras aumentas la eficiencia y competitividad.
+        <div class="block absolute top-[34rem] left-1/3 bg-black text-white p-2 rounded-md shadow-lg fade-in"
+             style="width: 180px;" data-delay="1.2">
+            Responde más rápido, toma decisiones basadas en <span class="text-emerald-400 font-bold">datos</span> y mejora la experiencia de tus <span class="text-pink-400 font-bold">clientes</span>.
         </div>
 
-        <!-- Línea de conexión diagonal -->
-        <div class="relative w-full flex justify-center">
-            <div class="absolute w-1 h-16 bg-gray-400 -rotate-12 origin-top-left"></div>
+        <div class="block absolute top-[38rem] right-1/4 bg-black text-white p-2 rounded-md shadow-lg fade-in"
+             style="width: 180px;" data-delay="1.4">
+            Integra <span class="text-blue-400 font-bold">IA</span> hoy y comienza a ver <span class="text-emerald-400 font-bold">resultados</span> desde el primer día.
         </div>
 
-        <!-- Bloque 5 -->
-        <div class="bg-gradient-to-r from-pink-500 to-pink-300 text-white p-4 rounded-xl shadow-md fade-in"
-             style="border-left: 4px solid #22d3ee; width: 100%; max-width: 600px;">
-            No se trata solo de tecnología, sino de transformar la manera en que trabajas y obtener resultados tangibles desde el primer día.
-        </div>
-
-        <!-- Línea de conexión diagonal -->
-        <div class="relative w-full flex justify-center">
-            <div class="absolute w-1 h-16 bg-gray-400 rotate-12 origin-top-left"></div>
-        </div>
-
-        <!-- Bloque 6 -->
-        <div class="bg-gradient-to-r from-indigo-700 to-indigo-500 text-white p-4 rounded-xl shadow-md fade-in"
-             style="border-left: 4px solid #f472b6; width: 100%; max-width: 600px;">
-            Optimiza cada proceso de tu negocio y libera a tu equipo para tareas estratégicas.
-        </div>
-
-        <!-- Línea de conexión diagonal -->
-        <div class="relative w-full flex justify-center">
-            <div class="absolute w-1 h-16 bg-gray-400 -rotate-12 origin-top-left"></div>
-        </div>
-
-        <!-- Bloque 7 -->
-        <div class="bg-gradient-to-r from-rose-600 to-rose-400 text-white p-4 rounded-xl shadow-md fade-in"
-             style="border-left: 4px solid #22c55e; width: 100%; max-width: 600px;">
-            Responde más rápido, toma decisiones basadas en datos y mejora la experiencia de tus clientes.
-        </div>
-
-        <!-- Línea de conexión diagonal -->
-        <div class="relative w-full flex justify-center">
-            <div class="absolute w-1 h-16 bg-gray-400 rotate-12 origin-top-left"></div>
-        </div>
-
-        <!-- Bloque 8 -->
-        <div class="bg-gradient-to-r from-yellow-500 to-yellow-300 text-white p-4 rounded-xl shadow-md fade-in"
-             style="border-left: 4px solid #6366f1; width: 100%; max-width: 600px;">
-            Integra IA hoy y comienza a ver resultados desde el primer día.
-        </div>
+        <!-- SVG líneas tipo flujo con efecto rastro de luz -->
+        <svg class="absolute top-0 left-0 w-full h-full pointer-events-none">
+            <defs>
+                <linearGradient id="flowLightGradient" gradientTransform="rotate(45)">
+                    <stop offset="0%" stop-color="#22d3ee"/>
+                    <stop offset="50%" stop-color="#facc15"/>
+                    <stop offset="100%" stop-color="#f472b6"/>
+                </linearGradient>
+            </defs>
+            <path class="flow-line" d="" stroke="url(#flowLightGradient)" stroke-width="3" fill="transparent" stroke-linecap="round"/>
+        </svg>
     </div>
+
+    <style>
+        .fade-in { opacity: 0; transform: translateY(10px) scale(0.95); transition: opacity 0.6s ease, transform 0.6s ease; }
+        .fade-in.visible { opacity: 1; transform: translateY(0) scale(1); }
+
+        .flow-line { stroke-dasharray: 1000; stroke-dashoffset: 1000; transition: stroke-dashoffset 1.2s ease; }
+    </style>
+
+    <script>
+        const blocks = document.querySelectorAll('.block');
+        const svgLine = document.querySelector('.flow-line');
+
+        function animateFlow() {
+            blocks.forEach((block, i) => {
+                setTimeout(() => block.classList.add('visible'), i * 300);
+            });
+
+            // Curvas Bezier suaves entre bloques
+            let d = '';
+            for(let i=0; i<blocks.length-1; i++){
+                const rect1 = blocks[i].getBoundingClientRect();
+                const rect2 = blocks[i+1].getBoundingClientRect();
+                const x1 = rect1.left + rect1.width/2;
+                const y1 = rect1.top + rect1.height/2 + window.scrollY;
+                const x2 = rect2.left + rect2.width/2;
+                const y2 = rect2.top + rect2.height/2 + window.scrollY;
+
+                const ctrlX = (x1 + x2) / 2 + ((i%2===0)?50:-50);
+                const ctrlY = (y1 + y2) / 2;
+
+                d += `M${x1},${y1} C${ctrlX},${y1} ${ctrlX},${y2} ${x2},${y2} `;
+            }
+
+            svgLine.setAttribute('d', d);
+            svgLine.style.strokeDashoffset = 0;
+        }
+
+        window.addEventListener('load', animateFlow);
+        window.addEventListener('resize', animateFlow);
+        window.addEventListener('scroll', animateFlow);
+    </script>
 </section>
 
         </section>
