--- a/index.html
+++ b/index.html
@@ -40,104 +40,18 @@
                     Déjame ayudarte a mejorar tu negocio
                 </h1>
 
-   <!-- Hero Section Profesional: Flujo tipo n8n compacto -->
-<section class="py-20 relative min-h-screen flex justify-center items-start px-4 overflow-visible bg-gray-900">
-    <div class="relative w-full max-w-6xl h-full">
-
-        <!-- Bloques compactos negros con palabras resaltadas -->
-        <div class="block absolute top-0 left-1/2 transform -translate-x-1/2 bg-black text-white p-3 rounded-md shadow-lg fade-in"
-             style="width: 160px;" data-delay="0">
-            En un <span class="text-emerald-400 font-bold">mundo</span> donde cada minuto cuenta, <span class="text-blue-400 font-bold">integrar IA</span> ya no es opcional.
-        </div>
-
-        <div class="block absolute top-36 right-10 bg-black text-white p-3 rounded-md shadow-lg fade-in"
-             style="width: 160px;" data-delay="0.2">
-            La <span class="text-pink-400 font-bold">IA</span> optimiza <span class="text-yellow-400 font-bold">procesos</span>, reduce errores y libera a tu <span class="text-blue-400 font-bold">equipo</span>.
-        </div>
-
-        <div class="block absolute top-72 left-10 bg-black text-white p-3 rounded-md shadow-lg fade-in"
-             style="width: 160px;" data-delay="0.4">
-            Desde <span class="text-emerald-400 font-bold">responder consultas</span> hasta analizar <span class="text-yellow-400 font-bold">datos masivos</span> para decisiones inteligentes.
-        </div>
-
-        <div class="block absolute top-[28rem] right-20 bg-black text-white p-3 rounded-md shadow-lg fade-in"
-             style="width: 160px;" data-delay="0.6">
-            La <span class="text-pink-400 font-bold">IA</span> te permite ahorrar <span class="text-emerald-400 font-bold">tiempo</span> y dinero mientras aumentas la <span class="text-blue-400 font-bold">eficiencia</span>.
-        </div>
-
-        <div class="block absolute top-[32rem] left-1/4 bg-black text-white p-3 rounded-md shadow-lg fade-in"
-             style="width: 160px;" data-delay="0.8">
-            No se trata solo de <span class="text-pink-400 font-bold">tecnología</span>, sino de transformar cómo trabajas y obtener <span class="text-emerald-400 font-bold">resultados</span> desde el primer día.
-        </div>
-
-        <div class="block absolute top-[36rem] right-1/6 bg-black text-white p-3 rounded-md shadow-lg fade-in"
-             style="width: 160px;" data-delay="1">
-            Optimiza cada <span class="text-blue-400 font-bold">proceso</span> de tu negocio y libera a tu equipo para tareas <span class="text-yellow-400 font-bold">estratégicas</span>.
-        </div>
-
-        <div class="block absolute top-[40rem] left-1/3 bg-black text-white p-3 rounded-md shadow-lg fade-in"
-             style="width: 160px;" data-delay="1.2">
-            Responde más rápido, toma decisiones basadas en <span class="text-emerald-400 font-bold">datos</span> y mejora la experiencia de tus <span class="text-pink-400 font-bold">clientes</span>.
-        </div>
-
-        <div class="block absolute top-[44rem] right-1/4 bg-black text-white p-3 rounded-md shadow-lg fade-in"
-             style="width: 160px;" data-delay="1.4">
-            Integra <span class="text-blue-400 font-bold">IA</span> hoy y comienza a ver <span class="text-emerald-400 font-bold">resultados</span> desde el primer día.
-        </div>
-
-        <!-- SVG líneas tipo flujo con efecto rastro de luz -->
-        <svg class="absolute top-0 left-0 w-full h-full pointer-events-none">
-            <defs>
-                <linearGradient id="flowLightGradient" gradientTransform="rotate(45)">
-                    <stop offset="0%" stop-color="#22d3ee"/>
-                    <stop offset="50%" stop-color="#facc15"/>
-                    <stop offset="100%" stop-color="#f472b6"/>
-                </linearGradient>
-            </defs>
-            <path class="flow-line" d="" stroke="url(#flowLightGradient)" stroke-width="3" fill="transparent" stroke-linecap="round"/>
-        </svg>
-    </div>
-
-    <style>
-        .fade-in { opacity: 0; transform: translateY(10px) scale(0.95); transition: opacity 0.6s ease, transform 0.6s ease; }
-        .fade-in.visible { opacity: 1; transform: translateY(0) scale(1); }
-        .flow-line { stroke-dasharray: 1000; stroke-dashoffset: 1000; transition: stroke-dashoffset 1.2s ease; }
-    </style>
-
-    <script>
-        const blocks = document.querySelectorAll('.block');
-        const svgLine = document.querySelector('.flow-line');
-
-        function animateFlow() {
-            blocks.forEach((block, i) => {
-                setTimeout(() => block.classList.add('visible'), i * 300);
-            });
-
-            let d = '';
-            for(let i=0; i<blocks.length-1; i++){
-                const rect1 = blocks[i].getBoundingClientRect();
-                const rect2 = blocks[i+1].getBoundingClientRect();
-                const x1 = rect1.left + rect1.width/2 + window.scrollX;
-                const y1 = rect1.top + rect1.height/2 + window.scrollY;
-                const x2 = rect2.left + rect2.width/2 + window.scrollX;
-                const y2 = rect2.top + rect2.height/2 + window.scrollY;
-
-                const ctrlX = (x1 + x2) / 2 + ((i%2===0)?50:-50);
-                const ctrlY = (y1 + y2) / 2;
-
-                d += `M${x1},${y1} C${ctrlX},${y1} ${ctrlX},${y2} ${x2},${y2} `;
-            }
-
-            svgLine.setAttribute('d', d);
-            svgLine.style.strokeDashoffset = 0;
-        }
-
-        window.addEventListener('load', animateFlow);
-        window.addEventListener('resize', animateFlow);
-        window.addEventListener('scroll', animateFlow);
-    </script>
-</section>
-
+                <div class="text-lg md:text-xl text-gray-300 leading-relaxed max-w-3xl mx-auto fade-in">
+                    <p class="mb-6">
+                        En un mundo donde cada minuto cuenta, integrar inteligencia artificial en tu negocio ya no es una opción, es una necesidad. La IA no solo automatiza tareas repetitivas, sino que optimiza procesos, reduce errores y libera a tu equipo para centrarse en lo que realmente importa: hacer crecer tu empresa.
+                    </p>
+                    <p class="mb-6">
+                        Desde responder consultas de clientes en segundos hasta analizar grandes volúmenes de datos para tomar decisiones más inteligentes, la IA te permite ahorrar tiempo y dinero mientras aumentas la eficiencia y competitividad.
+                    </p>
+                    <p>
+                        No se trata solo de tecnología, sino de transformar la manera en que trabajas y obtener resultados tangibles desde el primer día.
+                    </p>
+                </div>
+            </div>
         </section>
 
         <!-- Automatizaciones Section -->
