--- a/index.html
+++ b/index.html
@@ -350,6 +350,31 @@
                 </div>
             </div>
         </section>
+                    <!-- Creador de vídeos -->
+                    <div class="bg-white/10 backdrop-blur-sm rounded-xl p-6 cursor-pointer card-expand hover:bg-white/20 hover:scale-105 transition-all duration-300 fade-in" onclick="toggleCard('citas')">
+                        <h3 class="text-xl font-semibold text-white mb-4">Creador de videos Automático</h3>
+                        <div id="citas-content" class="hidden">
+                            <div class="space-y-4 text-gray-300">
+                                <div>
+                                    <h4 class="font-semibold text-emerald-400 mb-2">¿Qué hace?</h4>
+                                    <p class="text-sm">Transforma textos, guiones o ideas en vídeos listos para publicar, con voz, música y edición profesional.</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-blue-400 mb-2">Beneficio:</h4>
+                                    <p class="text-sm">Permite generar contenido audiovisual constante sin depender de editores externos ni perder tiempo en postproducción.</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-purple-400 mb-2">Experiencia de trabajo:</h4>
+                                    <p class="text-sm">Convierte publicaciones o scripts en vídeos listos para redes sociales o YouTube en cuestión de minutos.</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-orange-400 mb-2">Tiempo ahorrado:</h4>
+                                    <p class="text-sm font-bold text-emerald-400">6–10 horas/vídeo</p>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="text-gray-400 text-sm" id="citas-hint">Haz clic para ver más detalles</p>
+                    </div>
 
         <!-- CTA Section -->
         <section class="py-20 px-4">
