--- a/index.html
+++ b/index.html
@@ -347,13 +347,11 @@
                         </div>
                         <p class="text-gray-400 text-sm" id="secretario-hint">Haz clic para ver más detalles</p>
                     </div>
-                </div>
-            </div>
-        </section>
+
                     <!-- Creador de vídeos -->
                     <div class="bg-white/10 backdrop-blur-sm rounded-xl p-6 cursor-pointer card-expand hover:bg-white/20 hover:scale-105 transition-all duration-300 fade-in" onclick="toggleCard('citas')">
                         <h3 class="text-xl font-semibold text-white mb-4">Creador de videos Automático</h3>
-                        <div id="citas-content" class="hidden">
+                        <div id="videos-content" class="hidden">
                             <div class="space-y-4 text-gray-300">
                                 <div>
                                     <h4 class="font-semibold text-emerald-400 mb-2">¿Qué hace?</h4>
@@ -373,9 +371,12 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="text-gray-400 text-sm" id="citas-hint">Haz clic para ver más detalles</p>
-                    </div>
-
+                        <p class="text-gray-400 text-sm" id="videos-hint">Haz clic para ver más detalles</p>
+                        </div>
+                    </div> 
+                </div>
+        </section>
+        
         <!-- CTA Section -->
         <section class="py-20 px-4">
             <div class="max-w-2xl mx-auto text-center">
