--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
                     </div>
 
                     <!-- Creador de vídeos -->
-                    <div class="bg-white/10 backdrop-blur-sm rounded-xl p-6 cursor-pointer card-expand hover:bg-white/20 hover:scale-105 transition-all duration-300 fade-in" onclick="toggleCard('citas')">
-                        <h3 class="text-xl font-semibold text-white mb-4">Creador de videos Automático</h3>
+                    <div class="bg-white/10 backdrop-blur-sm rounded-xl p-6 cursor-pointer card-expand hover:bg-white/20 hover:scale-105 transition-all duration-300 fade-in" onclick="toggleCard('videos')">
+                        <h3 class="text-xl font-semibold text-white mb-4">Creador de Vìdeos Automático</h3>
                         <div id="videos-content" class="hidden">
                             <div class="space-y-4 text-gray-300">
                                 <div>
