--- a/index.html
+++ b/index.html
@@ -373,6 +373,32 @@
                         </div>
                         <p class="text-gray-400 text-sm" id="videos-hint">Haz clic para ver más detalles</p>
                         </div>
+                    
+                    <!-- Agente reseñas -->
+                    <div class="bg-white/10 backdrop-blur-sm rounded-xl p-6 cursor-pointer card-expand hover:bg-white/20 hover:scale-105 transition-all duration-300 fade-in" onclick="toggleCard('Reseñas')">
+                        <h3 class="text-xl font-semibold text-white mb-4">Agente de Reseñas Automaticas</h3>
+                        <div id="reseñas-content" class="hidden">
+                            <div class="space-y-4 text-gray-300">
+                                <div>
+                                    <h4 class="font-semibold text-emerald-400 mb-2">¿Qué hace?</h4>
+                                    <p class="text-sm">Analiza automáticamente cada nueva reseña en tu perfil de Google, genera la mejor respuesta con IA y la publica. Si la reseña es negativa, notifica al equipo de forma inmediata.</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-blue-400 mb-2">Beneficio:</h4>
+                                    <p class="text-sm">Mantiene una reputación online impecable sin perder tiempo respondiendo manualmente.</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-purple-400 mb-2">Experiencia de trabajo:</h4>
+                                    <p class="text-sm">Cada reseña se analiza, responde y registra sin intervención humana, asegurando coherencia con el tono de marca y reacción rápida ante comentarios negativos.</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-orange-400 mb-2">Tiempo ahorrado:</h4>
+                                    <p class="text-sm font-bold text-emerald-400">4–6 horas/semana</p>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="text-gray-400 text-sm" id="reseñas-hint">Haz clic para ver más detalles</p>
+                        </div>
                     </div> 
                 </div>
         </section>
