--- a/index.html
+++ b/index.html
@@ -375,9 +375,9 @@
                         </div>
                     
                     <!-- Agente reseñas -->
-                    <div class="bg-white/10 backdrop-blur-sm rounded-xl p-6 cursor-pointer card-expand hover:bg-white/20 hover:scale-105 transition-all duration-300 fade-in" onclick="toggleCard('Reseñas')">
+                                        <div class="bg-white/10 backdrop-blur-sm rounded-xl p-6 cursor-pointer card-expand hover:bg-white/20 hover:scale-105 transition-all duration-300 fade-in" onclick="toggleCard('reseña')">
                         <h3 class="text-xl font-semibold text-white mb-4">Agente de Reseñas Automaticas</h3>
-                        <div id="reseñas-content" class="hidden">
+                        <div id="reseña-content" class="hidden">
                             <div class="space-y-4 text-gray-300">
                                 <div>
                                     <h4 class="font-semibold text-emerald-400 mb-2">¿Qué hace?</h4>
@@ -397,7 +397,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="text-gray-400 text-sm" id="reseñas-hint">Haz clic para ver más detalles</p>
+                        <p class="text-gray-400 text-sm" id="reseña-hint">Haz clic para ver más detalles</p>
                         </div>
                     </div> 
                 </div>
