--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                             <div class="space-y-4 text-gray-300">
                                 <div>
                                     <h4 class="font-semibold text-emerald-400 mb-2">¿Qué hace?</h4>
-                                    <p class="text-sm">Analiza automáticamente cada nueva reseña en tu perfil de Google, genera la mejor respuesta con IA y la publica. Si la reseña es negativa, notifica al equipo de forma inmediata.</p>
+                                    <p class="text-sm">Solicita y analiza automáticamente cada nueva reseña en tu perfil de Google, genera la mejor respuesta con IA y la publica. Si la reseña es negativa, notifica al equipo de forma inmediata.</p>
                                 </div>
                                 <div>
                                     <h4 class="font-semibold text-blue-400 mb-2">Beneficio:</h4>
